--- a/galeriaarte-web/src/main/webapp/src/modules/pagos/pagos.detail.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/pagos/pagos.detail.html
@@ -16,7 +16,7 @@
                 <dd>{{currentPago.impuesto}}</dd>
                 
                 <hr>
-                <dt>Id Compra</dt>
+                <dt>Compra</dt>
                 <a ui-sref="compraDetail({compraId: currentPago.compra.id})">{{currentPago.compra.id}}</a>
 
             </dl>
