--- a/galeriaarte-web/src/main/webapp/src/modules/pagos/pagos.list.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/pagos/pagos.list.html
@@ -5,17 +5,17 @@
             <div class="panel-body">
                 <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                     <div class="btn-group mr-2" role="group" aria-label="First group">
-                        <a class="btn btn-info" ui-sref="pagoCreate"><span class="glyphicon glyphicon-plus-sign"></span> Pagar</a>
+                        <a class="btn btn-info" ui-sref="pagoCreateCompra({compraId: currentCompra.id})"><span class="glyphicon glyphicon-plus-sign"></span> Pagar</a>
                     </div>
                 </div>
                 <div class="col-md-8">
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th>Id</th> 
+                                <th>ID</th> 
                                 <th>Total</th>
                                 <th>Impuesto</th>
-                                <th>IdCompra</th>
+                                <th>Compra</th>
                                 <th>Acciones</th>
                             </tr>
                         </thead>
