--- a/galeriaarte-web/src/main/webapp/src/modules/pagos/new/pagos.new.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/pagos/new/pagos.new.html
@@ -2,19 +2,12 @@
     <div class="panel-group">
         <div class="panel panel-primary">
             <div class="panel-heading"><label ng-if="!edit" id="createPago">Pagar</label>
-                <label ng-if="edit" id="editComentario">Edit Comentario</label></div>
             <div class="panel-body">
                 <form ng-submit="createPago()" name="pago">
-<!--                    <div class="form-group row">
-                        <div class="form-group col-md-6">
-                            <label for="pagoId" class="col-sm-2">Id:</label>
-                            <input id="pagoId" required ng-model="pagoId" class="col-sm-6"/>
-                        </div>
-                    </div>-->
                     <div class="form-group row">
                         <div class="form-group col-md-6">
-                            <label for="pagoTotal" class="col-sm-2">Total:</label>
-                            <input id="pagoTotal" required ng-model="pagoTotal" class="col-sm-6"/>
+                            <label for="total" class="col-sm-2">Total:</label>
+                            <input id="total" required ng-model="total" class="col-sm-6"/>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -25,7 +18,7 @@
                     </div>
                     <div class="form-group row">
                         <div class="form-group col-md-6">
-                            <label for="pagoCompraId" class="col-sm-2">Id compra:</label>
+                            <label for="pagoCompraId" class="col-sm-2">Compra:</label>
                             <input id="pagoCompraId" required ng-model="pagoCompraId" class="col-sm-6"/>
                         </div>
                     </div>
