--- a/galeriaarte-web/src/main/webapp/src/modules/obras/obras.list.html
+++ b/galeriaarte-web/src/main/webapp/src/modules/obras/obras.list.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" >
     <div class="row">
         <br>
-        <h2 class="text-center" ><font style="align-content: center">Obras</font></h2>
+        <h2 class="text-center" ><font style="align-content: center ;font-size: 55px" >Obras</font></h2>
         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
             <div class="btn-group mr-2" role="group" aria-label="First group">
                 <a ng-if="isAuthenticated() && hasPermissions()" class="btn btn-info" ui-sref="obrasCreate"><span class="glyphicon glyphicon-plus-sign"></span> Agregar una nueva obra</a>
